--- a/src/DocSite/Templates/Html/Root.html
+++ b/src/DocSite/Templates/Html/Root.html
@@ -25,13 +25,30 @@
 </nav>
 <div class="container-fluid" style="margin-top: 30px;">
     <div class="row">
-        <div class="col-md-4" role="complementary">
+        <div class="col-md-3" role="complementary">
             <nav class="hidden-print hidden-xs hidden-sm affix">
                 <ul id="navTree" class="nav"></ul>
             </nav>
         </div>
-        <div class="col-md-8" role="main">
-            @Body
+        <div class="col-md-9" role="main">
+
+            <h1>Test.Assembly.Type</h1>
+            <h2>Summary</h2>
+            <div>
+                This is some text.
+            </div>
+            <h2>Remarks</h2>
+            <div>
+                More text about this random <a href="#">Type</a>.
+            </div>
+            <h2>Example</h2>
+            <div>
+                This is an example with some inline <code>code</code>.
+                <pre>
+This is some pre
+formatted text. E.G. a code block.
+</pre>
+            </div>
         </div>
     </div>
 </div>
@@ -40,7 +57,15 @@
 <script src="scripts/bootstrap-treeview.min.js"></script>
 <script type="text/javascript">
     $(function() {
-        var navData = @NavTree;
+        var navData = [
+            {
+                text: "Test.Assembly",
+                state: { expanded: true },
+                nodes: [
+                    { text: "Type", state:{selected:true} }
+                ]
+            }
+        ];
         $("#navTree").treeview({ data: navData });
     });
 </script>
