Fix the build and more progress on rendering.

--- a/src/DocSite/Templates/Html/Root.html
+++ b/src/DocSite/Templates/Html/Root.html
@@ -44,7 +44,7 @@
             <h2>Example</h2>
             <div>
                 This is an example with some inline <code>code</code>.
-                <pre>
+                <pre class="pre-scrollable">
 This is some pre
 formatted text. E.G. a code block.
 </pre>
