--- a/src/DocSite/Templates/Html/Page.html
+++ b/src/DocSite/Templates/Html/Page.html
@@ -4,6 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <title>@AssemblyName Docs - @Title</title>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap-treeview.min.css"/>
     <style type="text/css">
@@ -32,23 +34,8 @@
         </div>
         <div class="col-md-9" role="main">
 
-            <h1>Test.Assembly.Type</h1>
-            <h2>Summary</h2>
-            <div>
-                This is some text.
-            </div>
-            <h2>Remarks</h2>
-            <div>
-                More text about this random <a href="#">Type</a>.
-            </div>
-            <h2>Example</h2>
-            <div>
-                This is an example with some inline <code>code</code>.
-                <pre class="pre-scrollable">
-This is some pre
-formatted text. E.G. a code block.
-</pre>
-            </div>
+            <h1>@Title</h1>
+            @Body
         </div>
     </div>
 </div>
@@ -57,15 +44,7 @@ formatted text. E.G. a code block.
 <script src="scripts/bootstrap-treeview.min.js"></script>
 <script type="text/javascript">
     $(function() {
-        var navData = [
-            {
-                text: "Test.Assembly",
-                state: { expanded: true },
-                nodes: [
-                    { text: "Type", state:{selected:true} }
-                ]
-            }
-        ];
+        var navData = @NavJson;
         $("#navTree").treeview({ data: navData });
     });
 </script>
