Fixed bug with top level namespaces.

--- a/src/DocSite/Templates/Html/Page.html
+++ b/src/DocSite/Templates/Html/Page.html
@@ -19,13 +19,13 @@
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
+    <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">@AssemblyName</a>
+            <a class="navbar-brand" href="index.html">@AssemblyName</a>
         </div>
     </div>
 </nav>
-<div class="container-fluid" style="margin-top: 30px;">
+<div class="container" style="margin-top: 30px;">
     <div class="row">
         <div class="col-md-3" role="complementary">
             <nav class="hidden-print hidden-xs hidden-sm affix">
