--- a/src/DocSite/Templates/Html/Page.html
+++ b/src/DocSite/Templates/Html/Page.html
@@ -19,13 +19,13 @@
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
+    <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="index.html">@AssemblyName</a>
         </div>
     </div>
 </nav>
-<div class="container" style="margin-top: 30px;">
+<div class="container-fluid" style="margin-top: 30px;">
     <div class="row">
         <div class="col-md-3" role="complementary">
             <nav class="hidden-print hidden-xs hidden-sm affix">
@@ -44,8 +44,8 @@
 <script src="scripts/bootstrap-treeview.min.js"></script>
 <script type="text/javascript">
     $(function() {
-        var navData = @NavJson;
-        $("#navTree").treeview({ data: navData });
+        var navData = JSON.parse('@NavJson');
+        $("#navTree").treeview({ data: navData, enableLinks: true });
     });
 </script>
 </body>
